--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://crazyloon.github.io/PickyNickys/",
   "name": "bakery-cost-calculator",
   "version": "0.1.0",
   "private": true,
